--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -34,11 +34,11 @@ body {
 }
 
 .container .container {
-  width: inherit;
+  width: 100%;
 }
 
 .modal .container {
-  width: inherit;
+  width: 100%;
 }
 
 /* FILE CARD */
