.deleted class update

--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -257,7 +257,7 @@ textarea {
   border: none;
   box-shadow: none;
 }
-.deleted *:not(.btn) {
+.deleted, .deleted *:not(.btn) {
   text-decoration: line-through!important;
 }
 
