--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -15,17 +15,17 @@ body {
   background-color: #fff;
   border-radius: 4px;
   border: 1px solid #ddd;
-  padding: 20px;
+  padding: 20px!important;
 }
 
-.sheet .sheet,
+.sheet .sheet {
+  border: none!important;
+  padding: 0!important;
+}
+
 .modal .sheet {
   border: none!important;
-}
-
-.container .sheet {
-  margin-left: -15px;
-  margin-right: -15px;
+  padding: 5px!important;
 }
 
 .container-fluid .sheet, .container-fluid.sheet {
