--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -22,9 +22,106 @@ body {
  opacity: 1;
 }
 
-/* Sheets */
+/* The ribbons */
 
+.ribbon-wrapper {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  top: 0px;
+  left: 0px;
+}
+.ribbon-wrapper.top-left {
+  top: 0px;
+  left: 0px;
+}
+.ribbon-wrapper.top-right {
+  left: auto;
+  top: 0px;
+  right: 0px;
+}
+.ribbon-wrapper.bottom-left {
+  top: auto;
+  bottom: 0px;
+  left: 0px;
+}
+.ribbon-wrapper.bottom-right {
+  right: 0px;
+  bottom: 0px;
+  top: auto;
+  left: auto;
+}
+.ribbon {
+  width: 105px;
+  background: #e43;
+  position: absolute;
+  top: 10px;
+  left: -25px;
+  text-align: center;
+  line-height: 25px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 0.9em;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  z-index: 10000;
+}
+
+/* Ribbons */
+
+.ribbon.sticky {
+  position: fixed;
+}
+.ribbon.shadow {
+  box-shadow: 0 0 3px rgba(0,0,0,.3);
+}
+
+/* Different positions */
+.ribbon.top-left {
+  top: 15px;
+  left: -25px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.ribbon.top-right {
+  top: 15px;
+  right: -25px;
+  left: auto;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+.ribbon.bottom-left {
+  top: auto;
+  bottom: 15px;
+  left: -25px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+.ribbon.bottom-right {
+  top: auto;
+  right: -25px;
+  bottom: 15px;
+  left: auto;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+/* Colors */
+.ribbon.default { background: #777; }
+.ribbon.primary { background: #337ab7; }
+.ribbon.info { background: #5bc0de; }
+.ribbon.success { background: #5cb85c; }
+.ribbon.warning { background: #f0ad4e; }
+.ribbon.danger { background: #d9534f; }
+
+
+/* Sheets */
 .sheet {
+  position: relative;
   background-color: #fff;
   border-radius: 4px;
   border: 1px solid #ddd;
@@ -34,6 +131,7 @@ body {
 .sheet .sheet {
   border: none!important;
   padding: 0!important;
+  position: static!important;
 }
 
 .modal .sheet {
@@ -714,6 +812,7 @@ td > #rel-actions {
   top: 0px;
   left:0px;
   z-index: 99;
+  padding: 2px 4px;
   opacity: 0.7;
 }
 .sortable-placeholder {
