--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -1250,3 +1250,7 @@ svg.process-path-highlight path
   margin-right: 7px;
   margin-bottom: 7px;
 }
+.label-template > #rel-actions {
+  position: relative!important;
+  margin: 0 0 0 7px!important;
+}
