block buttons css fix

--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -1258,3 +1258,8 @@ svg.process-path-highlight path
   position: relative!important;
   margin: 0 0 0 7px!important;
 }
+
+/* Buttons */
+.btn-block {
+  white-space: normal;
+}
