double deleted alert fix

--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -383,12 +383,8 @@ textarea {
   border: none;
   box-shadow: none;
 }
-.deleted, .deleted *:not(.btn) {
-  text-decoration: line-through!important;
-}
-.deleted[typeof='v-s:Appointment'], .deleted[typeof='v-s:Appointment'] *,
-.deleted[typeof='v-s:Position'], .deleted[typeof='v-s:Position'] *,
-.deleted[typeof='v-s:Person'], .deleted[typeof='v-s:Person'] * {
+
+.deleted, .deleted * {
   text-decoration: none!important;
   color: #888;
 }
