--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -383,7 +383,7 @@ textarea {
   border: none;
   box-shadow: none;
 }
-.deleted, .deleted * {
+.deleted, .deleted *:not(#deleted-alert):not(#deleted-alert-msg):not(#deleted-alert-recover) {
   text-decoration: none!important;
   color: #aaa;
 }
