--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -286,7 +286,7 @@ hr.black {
 }
 
 #main {
-  margin-bottom:50px;
+  margin-bottom:120px;
 }
 .huge {
   font-size: 32px;
@@ -1258,4 +1258,18 @@ svg.process-path-highlight path
 /* Buttons */
 .btn-block {
   white-space: normal;
+}
+
+/* Fixed buttons */
+@media (min-width: 992px) {
+  .actions-fixed {
+    position: fixed;
+    background-color: white;
+    bottom: 30px;
+    margin: 0 -20px;
+    padding: 20px;
+    z-index: 1010;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+    border-radius: 4px;
+  }
 }
