--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -1262,12 +1262,18 @@ svg.process-path-highlight path
 
 /* Fixed buttons */
 @media (min-width: 992px) {
+  .modal .actions-fixed {
+    position: static;
+    margin: 0;
+    padding: 0;
+    box-shadow: none;
+  }
   .actions-fixed {
     position: fixed;
-    background-color: white;
+    background-color: #fff;
     bottom: 30px;
-    margin: 0 -20px;
-    padding: 20px;
+    margin: 0 -40px;
+    padding: 20px 20px 20px 40px;
     z-index: 1010;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
     border-radius: 4px;
