--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -657,8 +657,63 @@ fieldset[disabled] .form-control {
   overflow: hidden!important;
 }
 
-/* [BEGIN] Typeahead */
 
+/* [BEGIN] Link control */
+.link-control {
+  position: relative;
+}
+
+.link-control .fulltext-menu {
+  display: none;
+  width: 100%;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  min-width: 160px;
+  margin: 3px 0;
+  padding: 10px;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  background-clip: padding-box;
+}
+
+.link-control .suggestions {
+  max-height: 250px;
+  overflow-y: auto;
+}
+
+.link-control .suggestion {
+  padding: 3px;
+  white-space: nowrap;
+}
+
+.link-control .suggestion.selected {
+  color: #ffffff;
+  background-color: #428bca;
+  cursor: pointer;
+}
+
+.link-control .suggestion.selected:hover {
+  color: #ffffff;
+  background-color: #3b7db5;
+  cursor: pointer;
+}
+
+.link-control .suggestion:hover {
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
+
+.scrollable-typeahead .tt-menu  {
+}
+
+/* [END] Link control */
+
+
+/* [BEGIN] Typeahead */
 span.twitter-typeahead .tt-menu {
   width: 100%;
   position: absolute;
@@ -701,7 +756,7 @@ span.twitter-typeahead {
 span.twitter-typeahead .tt-hint {
   color: transparent;
 }
-.scrollable-typeahead .tt-menu {
+.scrollable-typeahead .tt-menu  {
   max-height: 400px;
   overflow-y: auto;
 }
