fulltext: close suggestion container

--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -684,9 +684,21 @@ fieldset[disabled] .form-control {
 }
 
 .link-control .header {
+  width: 100%;
   padding: 5px 15px;
   border-bottom: 1px solid #ccc;
   background-color: #eee;
+  display: table;
+  content: " ";
+  clear: both;
+}
+.link-control .header > .actions > * {
+  cursor:pointer;
+  border-bottom: 1px dashed #707070;
+  margin-right: 10px;
+}
+.link-control .header > .actions > *:last {
+  margin-right: 0px;
 }
 
 .link-control .suggestions {
@@ -718,12 +730,12 @@ fieldset[disabled] .form-control {
 }
 
 .link-control .input-group > .form-control:first-child {
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 .link-control .input-group > .form-control:last-child {
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 /* [END] Link control */
