--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -646,27 +646,35 @@ fieldset[disabled] .form-control {
   background-image: none;
 }
 .carousel-caption {
-  text-align: left;
+  position: absolute;
+  margin-left: -15px;
+  top: 0px;
+  right: inherit;
+  left: inherit;
+  bottom: inherit;
+  width: inherit;
+  display:inline-block;
+  padding:0px 30px;
+  background: rgba(0,0,0,.4);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.carousel-caption * {
   text-shadow: 0px 2px 3px black;
-}
-.carousel-caption h1 {
-  font-size: 3em;
-}
-.carousel-caption p {
-  font-size: 1.5em;
+  color: white;
 }
 .carousel-indicators {
-  position: absolute;
-  bottom: 0px;
-  text-align: center;
-  width: 100%;
-  padding: 10px 30px;
-  margin: 0px;
+  bottom: -10px;
+  padding: 10px 10px;
+  width: inherit;
+  margin-left: auto;
+  margin-right: auto;
   left: 0px;
   right: 0px;
-  background-color: black;
-  opacity: 0.6;
+  background: rgba(0,0,0,.4);
   z-index: 15;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 .carousel-indicators > li {
   display: inline-block;
