--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -1,8 +1,8 @@
 body {
   position: relative;
   font-family:"Ubuntu",Tahoma,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  color: #333;
-  background-color: #f5f6f8;
+  color: #334;
+  background-color: #f8f8fa;
 }
 
 .bg-default {
@@ -270,12 +270,11 @@ body {
     margin-bottom: 1.5625rem; }
   .card a:hover {
     text-decoration: none; }
-  .card-small {
-    box-shadow: 0 2px 0 rgba(90, 97, 105, 0.11), 0 4px 8px rgba(90, 97, 105, 0.12), 0 10px 10px rgba(90, 97, 105, 0.06), 0 7px 70px rgba(90, 97, 105, 0.1); }
-    .card-small .card-header,
-    .card-small .card-body,
-    .card-small .card-footer {
-      padding: 1rem 1rem; }
+
+  .card-small .card-header,
+  .card-small .card-body,
+  .card-small .card-footer {
+    padding: 1rem 1rem; }
 
 .card-body {
   padding: 1.875rem; }
@@ -417,7 +416,7 @@ body {
     column-gap: 1.25rem; } }
 
 .card-post .card-body {
-  padding: 1.5625rem 1.5625rem; }
+  padding: 0 1.5625rem 1.5625rem; }
 
 .card-post .card-footer,
 .card-post .card-header {
@@ -426,10 +425,10 @@ body {
 
 .card-post__image {
   position: relative;
-  min-height: 15.3125rem;
+  min-height: 20rem;
   border-top-left-radius: 0.625rem;
   border-top-right-radius: 0.625rem;
-  background-size: cover;
+  /*background-size: cover;*/
   background-position: center;
   background-repeat: no-repeat; }
 
