--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -437,7 +437,7 @@ body {
   min-height: 20rem;
   border-top-left-radius: 0.625rem;
   border-top-right-radius: 0.625rem;
-  background-size: 50%;
+  background-size: 67% 67%;
   background-position: center;
   background-repeat: no-repeat; }
 
