--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -2,7 +2,8 @@ body {
   position: relative;
   font-family:"Ubuntu",Tahoma,"Helvetica Neue",Helvetica,Arial,sans-serif;
   color: #334;
-  background-color: #f8f8fa;
+  /*background-color: #f8f8fa;*/
+  background-color: #f2f2f2;
 }
 
 .bg-default {
