--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -418,7 +418,7 @@ body {
     column-gap: 1.25rem; } }
 
 .card-post .card-body {
-  padding: 0 1.5625rem 1.5625rem; }
+  /*padding: 0 1.5625rem 1.5625rem;*/ }
 
 .card-post .card-footer,
 .card-post .card-header {
@@ -491,7 +491,7 @@ body {
   /*padding-top: 2.1875rem;*/ }
 
 .card-post--1.card-post--aside .card-body {
-  padding: 1.5625rem 1.5625rem; }
+  /*padding: 1.5625rem 1.5625rem;*/ }
 
 .card-post--1.card-post--aside .card-post__author {
   left: 0.9375rem;
