--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -282,6 +282,8 @@ body {
   padding: 1.875rem; }
   .card-body > p:last-child {
     margin-bottom: 0; }
+  .card-body img {
+    width: 100%; }
 
 .card-title {
   font-weight: 500;
