--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -255,11 +255,12 @@ body {
 /* VERTICAL CARD */
 .card {
   width: 100%;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   background-color: #fff;
-  border: none;
+  /*border: none;*/
+  border: 1px solid #ddd;
   border-radius: 0.625rem;
-  box-shadow: 0 0.46875rem 2.1875rem rgba(90, 97, 105, 0.1), 0 0.9375rem 1.40625rem rgba(90, 97, 105, 0.1), 0 0.25rem 0.53125rem rgba(90, 97, 105, 0.12), 0 0.125rem 0.1875rem rgba(90, 97, 105, 0.1); }
+  /*box-shadow: 0 0.46875rem 2.1875rem rgba(90, 97, 105, 0.1), 0 0.9375rem 1.40625rem rgba(90, 97, 105, 0.1), 0 0.25rem 0.53125rem rgba(90, 97, 105, 0.12), 0 0.125rem 0.1875rem rgba(90, 97, 105, 0.1);*/ }
   .card > .list-group:first-child .list-group-item:first-child {
     border-top-left-radius: 0.625rem;
     border-top-right-radius: 0.625rem; }
