--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -1645,6 +1645,7 @@ svg.process-path-highlight path
 
 .label-template {
   display: inline-block;
+  white-space: pre-line;
   margin-right: 7px;
   margin-bottom: 7px;
 }
