fix(app cards): app link added to app small card

--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -701,7 +701,7 @@ textarea {
 }
 
 .no-margin {
-  margin: 0px;
+  margin: 0px!important;
 }
 .margin-sm {
   margin-top: 5px;
@@ -732,7 +732,7 @@ textarea {
   margin-right: 15px;
 }
 .no-padding {
-  padding: 0px;
+  padding: 0px!important;
 }
 .padding-sm {
   padding: 5px;
