--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -5,6 +5,7 @@ body {
   color: #333;
   /*background-color: #f8f8fa;*/
   background-color: #f2f2f2;
+  /*background: repeating-linear-gradient(-60deg, #fff, #fff 2px, #fefefe 2px, #f0f0f0 4px);*/
 }
 
 .bg-default {
