--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -295,9 +295,6 @@ em {
   font-style: normal;
   display: block;
 }
-em:first-child {
-  margin: 0px 0px 5px 0px;
-}
 
 hr.black {
   border-top: 1px solid #233333;
@@ -449,6 +446,10 @@ textarea {
 .no-margin {
   margin: 0px!important;
 }
+.margin-xs {
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
 .margin-sm {
   margin-top: 5px;
   margin-bottom: 5px;
@@ -461,9 +462,9 @@ textarea {
   margin-top: 15px;
   margin-bottom: 15px;
 }
-.margin-xs {
-  margin-top: 2px;
-  margin-bottom: 2px;
+.margin-xl {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 .margin-xs-h {
   margin-left: 2px;
@@ -480,6 +481,10 @@ textarea {
 .margin-lg-h {
   margin-left: 15px;
   margin-right: 15px;
+}
+.margin-xl-h {
+  margin-left: 30px;
+  margin-right: 30px;
 }
 .no-padding {
   padding: 0px!important;
