--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -155,6 +155,12 @@ body {
   width: 100%;
 }
 
+.container .container-fluid {
+  width: 100%;
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .modal .container {
   width: 100%;
 }
