--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -523,9 +523,9 @@ textarea {
   box-shadow: none;
 }
 .deleted, .deleted *:not(#deleted-alert-msg):not(#deleted-alert-recover),
-A.invalid {
+.invalid, .invalid *:not(#invalid-alert-msg):not(#invalid-alert-recover) {
   text-decoration: none!important;
-  color: #a94442;
+  color: #aaa;
 }
 dl {
   margin-top: 0;
